# soundcard_datarate

arecord_sampler/: CMakeLists.txt  README.md  arecord_collector.c
qaudioinput_sampler/: CMakeLists.txt  README.md  audiosink.cpp  audiosink.h  main.cpp
